# real-estate

./: README.md  pyproject.toml
.github/workflows/: pytest.yml  style.yml
data/: street_suffixes.json  street_types.json
notebooks/: scrape.ipynb  treatment_effects.ipynb
pipelines/: domain_listings.py  summary_statistics.py
real_estate/: enums.py  models.py  sanitise.py  scrape.py  util.py
real_estate/data/: sa_suburb_to_council.json  street_suffix_abbreviations.json  street_type_abbreviations.json
scripts/: statistics.sh
tests/: test_models.py  test_scrape.py
