[tool.poetry]
name = "real-estate"
version = "0.1.0"
description = ""
authors = ["Lewis Bails <lewis.bails@gmail.com>"]
readme = "README.md"
packages = [{include = "real_estate"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
cem = "^0.1.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
