[tool.poetry]
name = "real-estate"
version = "0.1.0"
description = ""
authors = ["Lewis Bails <lewis.bails@gmail.com>"]
readme = "README.md"
packages = [{include = "real_estate"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pydantic = "^2.4.2"
geopy = "^2.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
cem = "^0.1.9"
pandas = "^2.1.1"
pymongo = "^4.5.0"

[tool.poetry.group.style]
optional = true

[tool.poetry.group.style.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 550

[tool.flake8]
exclude = [".git" , "__pycache__", "venv"]
ignore = ["D400", "E203", "W"]
count = true
show-source = true
statistics = true
max-line-length = 550
docstring-convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
